<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.damian</groupId>
  <artifactId>warehouse</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>warehouse Maven Webapp</name>
  <url>http://maven.apache.org</url>


  <properties>
    <spring.version>5.1.5.RELEASE</spring.version>
    <spring.data.jpa>2.1.5.RELEASE</spring.data.jpa>
    <junit.version>4.12</junit.version>
    <hibernate.version>5.2.3.Final</hibernate.version>
    <mysql.version>5.1.40</mysql.version>
    <jackson.version>2.9.8</jackson.version>
    <javax.servlet.version>3.0.1</javax.servlet.version>
    <slf4j.version>1.7.5</slf4j.version>
    <spring.security.vesrion>4.2.3.RELEASE</spring.security.vesrion>
    <commons-lang.version>3.5</commons-lang.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

      <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-envers</artifactId>
          <version>${hibernate.version}</version>
      </dependency>

      <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-jpamodelgen</artifactId>
          <version>5.4.2.Final</version>
          <scope>provided</scope>
      </dependency>


      <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
      <version>3.6</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>


    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>


    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-jpa</artifactId>
      <version>${spring.data.jpa}</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysql.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${javax.servlet.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
      <version>${spring.security.vesrion}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
      <version>${spring.security.vesrion}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>${spring.security.vesrion}</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.0.Final</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang.version}</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>0.7.0</version>
    </dependency>



    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-data</artifactId>
      <version>${spring.security.vesrion}</version>
    </dependency>

    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itextpdf</artifactId>
      <version>5.5.12</version>
    </dependency>

    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itext-pdfa</artifactId>
      <version>5.5.12</version>
    </dependency>

    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itext-xtra</artifactId>
      <version>5.5.12</version>
    </dependency>

    <dependency>
      <groupId>com.itextpdf.tool</groupId>
      <artifactId>xmlworker</artifactId>
      <version>5.5.12</version>
    </dependency>


    <dependency>
      <groupId>commons-fileupload</groupId>
      <artifactId>commons-fileupload</artifactId>
      <version>1.3.1</version>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>RELEASE</version>
          <scope>test</scope>
      </dependency>


  </dependencies>
  <build>
    <finalName>warehouse</finalName>

    <pluginManagement>
      <plugins>

        <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
          <configuration>
            <url>http://localhost:8080/manager/text</url>
            <server>TomcatServer</server>
            <path>/</path>
            <username>admin</username>
            <password>admin</password>
            <update>true</update>
          </configuration>
      </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.6</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
            <warName>ROOT</warName>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
              <compilerArguments>
                  <processor>
                      org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor
                  </processor>
              </compilerArguments>
          </configuration>
        </plugin>


          <plugin>
              <groupId>org.bsc.maven</groupId>
              <artifactId>maven-processor-plugin</artifactId>
              <executions>
                  <execution>
                      <id>process</id>
                      <goals>
                          <goal>process</goal>
                      </goals>
                      <phase>generate-sources</phase>
                      <configuration>
                          <!-- source output directory -->
                          <outputDirectory>src/main/generated-java</outputDirectory>
                      </configuration>
                  </execution>
              </executions>
          </plugin>

          <!--<plugin>-->
              <!--<groupId>org.codehaus.mojo</groupId>-->
              <!--<artifactId>build-helper-maven-plugin</artifactId>-->
              <!--<version>1.3</version>-->
              <!--<executions>-->
              <!--<execution>-->
              <!--<id>add-source</id>-->
                <!--<phase>generate-sources</phase>-->
              <!--<goals>-->
                  <!--<goal>add-source</goal>-->
              <!--</goals>-->
              <!--<configuration>-->

                  <!--<sources>-->
                      <!--<source>src/main/generated-java</source>-->
                  <!--</sources>-->
              <!--</configuration>-->
              <!--</execution>-->
              <!--</executions>-->
          <!--</plugin>-->







      </plugins>
    </pluginManagement>

  </build>
</project>
